Bug 57532 - FILEOPEN particular .doc (MSO97) fails with error message
Summary: FILEOPEN particular .doc (MSO97) fails with error message
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.3.2 release
Hardware: Other All
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.0.0.0.beta0 target:4.1.0...
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-11-25 23:03 UTC by declan_moriarty
Modified: 2013-02-05 16:22 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example of Microsoft Word 97 .doc file that won't open. This is a simple small text file (very old press release). Was converted years ago from original Word Perfect file. (24.50 KB, application/msword)
2012-11-25 23:03 UTC, declan_moriarty
Details

Note You need to log in before you can comment on or make changes to this bug.
Description declan_moriarty 2012-11-25 23:03:53 UTC
Created attachment 70561 [details]
Example of Microsoft Word 97 .doc file that won't open.  This is a simple small text file (very old press release).  Was converted years ago from original Word Perfect file.

Problem description: LibreOffice 3.6.3.2. including the latest version 3.4.1 cannot open some MS Word 97 .doc files.  It produces the error "Read Error: not a winword97 file".

Steps to reproduce:
1. Double click on a Word 97 file that won't open. (Lots do but some don't)
2. LibO Writer will wait then produce the above error message.
3. Click OK on the error message and the file will not open.

Current behavior:  The 3.6.3.2 and the latest 3.4 version won't open some MS Word 97 .doc files.

Expected behavior:  All MS Word 97 .doc files should be opened.

              
Operating System: Mac OS X
Last worked in: 3.5.5.3 release
Comment 1 declan_moriarty 2012-11-25 23:35:14 UTC
Note that where in the Description it mentions the latest version 3.4.1, this should read 3.6.4.1
Comment 2 declan_moriarty 2012-11-25 23:38:48 UTC
Note that where it says "latest 3.4 version won't open some MS Word 97 .doc files." it should say "latest 3.6.4 version won't open some MS Word 97 .doc files."
Comment 3 Emir Sarı 2012-11-26 07:10:11 UTC
Reproducible using both LO 3.6.4.1 and 4.0.0.0 alpha1, OS X 10.7.5
Comment 4 declan_moriarty 2012-12-04 17:32:42 UTC
There are a total of 26 problem files I am looking at out of a total of 172 .doc files.  This gives a percentage of 15.12% affected.
Comment 5 Michael Stahl 2012-12-04 22:08:48 UTC
indeed doesn't open with 3.5.7.2 or current master...

Caolan, since reporter claims it worked in 3.5.5 i'm suspicious
of those robustness improvements, especially in sot...
Comment 6 Caolán McNamara 2012-12-05 13:11:12 UTC
well, I can make it work again anyway
Comment 7 Caolán McNamara 2012-12-05 13:14:55 UTC
This is a regression from d5345bfb40d6e33087fd053cc220308a2bc2945e FWIW
Comment 8 Not Assigned 2012-12-05 13:23:10 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ca458daaf8ccb02980300addda7e8863bb5c6924&g=libreoffice-4-0

Resolves: fdo#57532 restrict page sanity check to non-storage chunks


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Not Assigned 2012-12-05 13:23:31 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4a1044229afd6b52ca10e5c55f1957b153a8c6ea

Resolves: fdo#57532 restrict page sanity check to non-storage chunks



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2012-12-05 13:32:12 UTC
submitted workaround for 3-6/3-5 review
Comment 11 Not Assigned 2012-12-05 15:52:26 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=05a116786648c0a045956b626c3f9f163f0a268e&g=libreoffice-3-6

Resolves: fdo#57532 restrict page sanity check to non-storage chunks


It will be available in LibreOffice 3.6.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Not Assigned 2012-12-05 15:52:45 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1ea379e0035a325b05f91da805425ff9f871eec6&g=libreoffice-3-5

Resolves: fdo#57532 restrict page sanity check to non-storage chunks


It will be available in LibreOffice 3.5.8.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 declan_moriarty 2012-12-13 22:48:01 UTC
I have tested the LibreOffice LOdev Version 3.6.0.2+ (Build ID: a2267b) Beta

against the 26 .doc Word 97 files that that wouldn't open in 3.6.3.  They all opened successfully.  This was on the Mac running MAC OS X 10.6.8. Snow Leopard.

I also tested against: LOdev Version 4.0.0.0.beta1+ (Build ID: c1fa87738327413939f0355efd6cb73bc4eac88)
TinderBox: MacOSX-Intel@27-OSX_10.7.0-gcc_4.2.1_llvm, Branch:libreoffice-4-0, Time: 2012-12-11_09:23:18

The 26 Word 97 files opened in this version 4.0.0.0.

As far as I am concerned this patch solves this problem, for these files that wouldn't open.
Comment 14 Urmas 2012-12-17 18:04:45 UTC
*** Bug 58071 has been marked as a duplicate of this bug. ***
Comment 15 Rob Snelders 2012-12-17 21:53:18 UTC
the attached file opens in 4.0-beta1 on Ubuntu 12.04 x86_64.
Comment 16 declan_moriarty 2012-12-17 22:23:00 UTC
(In reply to comment #14)
> *** Bug 58071 has been marked as a duplicate of this bug. ***

Looking at 58071 the test file for this bug (print label) opens in 3.6.4.3 on Max OS X 10.6.8 successfully.  For this bug 57532 the test file generates an error message in 3.6.4.3 and won't open.  Both bugs appear to be fixed in 4.0.
Comment 17 declan_moriarty 2012-12-18 22:12:42 UTC
Trying to check if the fix for this bug 57532 will work in LibreOffice daily 3.6.5 and 3.5.8 I have found that there isn't any 3.6.5 version for MAC OS X.  There is definitely no MAC OS X version on the 3.5 branch.  There isn't any 3.5 branch.  How did the fix get propagated to 3.5.8 where there isn't any branch for 3.5?  The only version for MAC OS X was 3.6.0.2 that I tested against.

In the 3.6 branch the version: MacOSX-Intel@3-OSX_10.6.0-gcc_4.0.1/  doesn't have any file to download.  When you click this link you just get an empty directory with "Parent Directory" at the top.

Note that I have also tested the 4.0.0.0 version on the dailies.

Don't really understand what is going on here 3.6.0.2 looks like a really old version, but it has the fix for this bug newly put in it.
Comment 18 declan_moriarty 2012-12-18 22:17:41 UTC
Note that MacOSX-Intel@3-OSX_10.6.0-gcc_4.0.1/ should have the correct link:-

http://dev-builds.libreoffice.org/daily/libreoffice-3-6/MacOSX-Intel@3-OSX_10.6.0-gcc_4.0.1/

The above link leads to an empty directory with "Parent Directory" at the top.
Comment 19 Rainer Bielefeld Retired 2013-02-05 16:22:34 UTC
@all:
Can you please always keep the Summary up to date and useful? These "Once, in a starlit summer night, I wanted to open a document, what always worked, but that day, while I was drinking some Beaujolais red whine what my girl friend sent me last year ..." are not helpful wrangling through lots of bugs trying to find relations ;-)