Resolves: fdo#57532 restrict page sanity check to non-storage chunks

Change-Id: I47c24131e95b9a8a691dbff4710869ba91df8306
(cherry picked from commit 4a1044229afd6b52ca10e5c55f1957b153a8c6ea)
Reviewed-on: https://gerrit.libreoffice.org/1245
Reviewed-by: Michael Meeks <michael.meeks@suse.com>
Tested-by: Michael Meeks <michael.meeks@suse.com>